--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
 
     <ImageView
         android:id="@+id/cityImage"
@@ -14,6 +14,7 @@
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="this is city image"
         app:srcCompat="@drawable/bangkok">
 
     </ImageView>
